# agentic-tools-aitoolkit-python-example

./: .gitignore  README.md  compose.yml
agents/crud/agent2/: container.py  pyproject.toml
agents/my-ai-agent/: interactive.py  pyproject.toml  requirements.txt
artifacts/: schema.sql
data/: sample_data.sql
docs/: add-list-prompts.md  adding-auth-http.md
mcp-server/: .env.example  QUICKREF.md  README.md  USAGE.md  pyproject.toml  server.py  test_db.py  test_structure.py
scripts/: init-db.sh
