[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server for SQL Data Lookups - queries invoice, PO, vendor, and payment data from PostgreSQL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "psycopg2-binary",
]

[project.scripts]
mcp-server = "server:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
